--- a/Public/Assets/Css/index.css
+++ b/Public/Assets/Css/index.css
@@ -1,9 +1,12 @@
-aside>img {
-    position: absolute;
-    left: 0;
-    top: 0;
+body {
+    background-image: url(../Images/castle.jpg);
+    background-size: cover;
+}
+
+.container {
+    background-color: rgb(0, 0, 0, 0.5);
     width: 100%;
-    opacity: 20%;
+    height: 100%;
 }
 
 main {
@@ -11,7 +14,7 @@ main {
     position: relative;
     z-index: 2;
     text-align: center;
-    margin-top: 20vh;
+    top: 20vh;
 }
 
 form {
