--- a/Public/Assets/Css/recados.css
+++ b/Public/Assets/Css/recados.css
@@ -140,7 +140,6 @@ form>h3 {
     transition: 0.6s ease-in-out;
     animation-name: odete;
     animation-duration: 2s;
-    animation-delay: 0s;
     color: black;
 }
 
@@ -242,6 +241,8 @@ table .linhas td {
     left: 50%;
     width: 50%;
     transform: translateY(-50%) translateX(-50%);
+    animation-name: transitionModal;
+    animation-duration: 0.5s;
 }
 
 #cancelarBtnModal {
@@ -343,5 +344,15 @@ table .linhas td {
 
     100% {
         filter: drop-shadow(1px 1px 20px #000000);
+    }
+}
+
+@keyframes transitionModal {
+    0% {
+        transform: translateY(100%) translateX(-50%)
+    }
+
+    100% {
+        transform: translateY(-50%) translateX(-50%)
     }
 }
