--- a/Public/Assets/Css/recados.css
+++ b/Public/Assets/Css/recados.css
@@ -15,6 +15,102 @@ h1 {
     margin-left: 20px;
 }
 
+.alertbox {
+    position: fixed;
+    left: 1px;
+    bottom: -10px;
+    size: 5px;
+}
+
+.alertImg {
+    width: 40%;
+    display: none;
+    filter: drop-shadow(1px 1px 13px rgb(35, 205, 243));
+    animation-name: transitionImg;
+    animation-duration: 0.8s;
+}
+
+@keyframes transitionImg {
+    0% {
+        transform: translateY(100%);
+    }
+}
+
+#dobbyBox {
+    position: fixed;
+    display: none;
+    left: 1px;
+    bottom: -10px;
+    size: 5px;
+}
+
+#dobbyAlert {
+    box-shadow: 0.4em 0 1em rgb(35, 205, 243), 16px 16px 1em black;
+    background-color: #202328;
+    opacity: 95%;
+    width: 40%;
+    height: 15%;
+    animation-name: transitionImg;
+    animation-duration: 2s;
+}
+
+#confirmDobby {
+    position: fixed;
+    height: 2.2vh;
+    width: 5.5vw;
+    border-radius: 3px;
+    bottom: 58px;
+    left: 300px;
+    border: rgb(85, 190, 24) 1px solid;
+    animation-name: transitionBtn;
+    animation-duration: 1.5s;
+}
+
+#confirmDobby:hover {
+    background-color: #f4f4f4;
+    transition: 0.6s ease-in-out;
+    filter: drop-shadow(1px 1px 8px rgb(111, 243, 35));
+}
+
+#confirmDobby:active {
+    background-color: rgb(111, 243, 35);
+    color: black;
+    border: black 2px solid;
+    transition: 0.1s ease-in-out;
+}
+
+
+#cancelDobby {
+    position: fixed;
+    height: 2.2vh;
+    width: 5.5vw;
+    border-radius: 3px;
+    bottom: 25px;
+    left: 300px;
+    border: rgb(243, 35, 35) 1px solid;
+    animation-name: transitionBtn;
+    animation-duration: 0.8s;
+}
+
+#cancelDobby:hover {
+    background-color: #f4f4f4;
+    transition: 0.6s ease-in-out;
+    filter: drop-shadow(1px 1px 8px rgb(243, 35, 35));
+}
+
+#cancelDobby:active {
+    background-color: rgb(243, 35, 35);
+    color: black;
+    border: black 2px solid;
+    transition: 0.1s ease-in-out;
+}
+
+@keyframes transitionBtn {
+    0% {
+        transform: translateY(500%);
+    }
+}
+
 form {
     box-shadow: 0.4em 0 1em rgba(35, 205, 243, 0.565), 16px 16px 1em black;
     background-color: #202328;
