--- a/Public/Assets/Css/index.css
+++ b/Public/Assets/Css/index.css
@@ -39,10 +39,10 @@ form {
 }
 
 #logar {
-    flex-shrink: 1;
     padding: 3px;
     margin-bottom: 13px;
-    width: 20vw;
+    width: 18vw;
+    font-size: clamp(0.7rem, 2vw, 1rem);
     border: solid 1px rgb(35, 205, 243);
     border-radius: 5px;
 }
@@ -58,7 +58,6 @@ form {
     transition: 0.2s ease-in-out;
     background: rgb(35, 205, 243);
 }
-
 
 .alertbox {
     position: fixed;
@@ -85,6 +84,7 @@ form {
 
 form>h2 {
     margin-bottom: 35px;
+    font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
 form>a:link {
@@ -119,11 +119,10 @@ form>a:active {
 .form-control {
     display: block;
     line-height: 2em;
-    margin: 0;
     padding-left: 10px;
     margin-bottom: 20px;
     width: 100%;
-    font-size: medium;
+    font-size: clamp(0.8rem, 2vw, 1rem);
     border: 1px solid #f4f4f4;
     background-color: #f4f4f4;
     border-radius: 5px;
@@ -159,6 +158,6 @@ form>a:active {
     visibility: visible;
     z-index: 3;
     opacity: 1;
-    transform: translateY(-3.5vh);
+    transform: translateY(-4vh);
     transition: 0.8s ease-in-out transform;
 }
