--- a/Public/Assets/Css/index.css
+++ b/Public/Assets/Css/index.css
@@ -4,7 +4,6 @@ body {
 }
 
 .container {
-    background-color: rgb(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
     display: flex;
@@ -83,6 +82,8 @@ form {
 
 form>h2 {
     margin-bottom: 35px;
+    font-family: 'Franklin Gothic Medium', Arial Narrow, Arial, sans-serif;
+    color: rgba(255, 255, 255, 0.688);
     font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
